--- a/index1.html
+++ b/index1.html
@@ -32,29 +32,29 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/thumbs/piture1.JPEG" data-position="left center"><img src="images/fulls/piture1.JPEG" alt="" /></a>
+							<a class="thumbnail" href="images/thumbs/piture1.jpg" data-position="left center"><img src="images/thumbs/piture1.jpg" alt="" /></a>
 								
 						 
 							<h2></h2>
 							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/2.JPEG"><img src="images/thumbs/2.JPEG" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/2.JPEG"><img src="images/thumbs/2.jpg" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/DSC00249.JPEG" data-position="top center"><img src="images/thumbs/DSC00249.JPEG" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/DSC00249.jpg" data-position="top center"><img src="images/thumbs/DSC00249.jpg" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/DSC00358.JPEG"><img src="images/thumbs/DSC00358.JPEG" alt="" /></a>
+							<a class="thumbnail" href="images/thumbs/DSC00358(1).jpg"><img src="images/thumbs/DSC00358(1).jpg" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/DSC00364.JPEG" data-position="top center"><img src="images/thumbs/DSC00364kopie.JPEG" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/DSC00364.jpg" data-position="top center"><img src="images/thumbs/DSC00364kopie.JPEG" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
