--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Ole Scherzberg Gallery</h1>
-						<p>music, money, sport</p>
+						<p>music and sport</p>
 						<ul class="icons">
 							<li><a href="https://x.com/oleszbg" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/ole.szbg/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -56,3 +56,4 @@
 
 	</body>
 </html>
+
