--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 				<!-- Thumbnails -->
 					<section id="thumbnails">
-						<article><a class="thumbnail" href="images/fulls/piture1.jpg"><img src="images/thumbs/piture1.jpg" alt="" /></a></article>
-						<article><a class="thumbnail" href="images/fulls/2.JPEG"><img src="images/thumbs/2.jpg" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/DSC01622.JPG"><img src="images/thumbs/DSC01622.JPG" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/DSC01622.JPG"><img src="images/thumbs/DSC01622.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00249.jpg"><img src="images/thumbs/DSC00249.jpg" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00358(1).jpg"><img src="images/thumbs/DSC00358(1).jpg" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00364.jpg"><img src="images/thumbs/DSC00364kopie.JPEG" alt="" /></a></article>
@@ -56,4 +56,5 @@
 
 	</body>
 </html>
+
 
