--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Ole Scherzberg Gallery</h1>
-						<p>music and sport</p>
+						<h1>Ole Scherzberg </h1>
+						<p>m100% Life</p>
 						<ul class="icons">
 							<li><a href="https://x.com/oleszbg" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/ole.szbg/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -56,6 +56,7 @@
 
 	</body>
 </html>
+
 
 
 
