--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<section id="thumbnails">
 						<article><a class="thumbnail" href="images/fulls/DSC01622.JPG"><img src="images/thumbs/DSC01622.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC01201.JPG"><img src="images/thumbs/DSC01202.JPG" alt="" /></a></article>
-						<article><a class="thumbnail" href="images/fulls/DSC00249.jpg"><img src="images/thumbs/DSC00249.jpg" alt="" /></a></article>
-						<article><a class="thumbnail" href="images/fulls/DSC00358(1).jpg"><img src="images/thumbs/DSC00358(1).jpg" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/DSC01392.JPG"><img src="images/thumbs/DSC01391.JPG" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/DSC01264.JPG"><img src="images/thumbs/DDSC01264.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00364.jpg"><img src="images/thumbs/DSC00364kopie.JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/IMG_4413.JPEG"><img src="images/thumbs/IMG_4413.JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/IMG_4605.JPEG"><img src="images/thumbs/IMG_4605.JPEG" alt="" /></a></article>
@@ -56,6 +56,7 @@
 
 	</body>
 </html>
+
 
 
 
