--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<article><a class="thumbnail" href="images/fulls/DSC01392.JPG"><img src="images/thumbs/DSC01391.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC01264.JPG"><img src="images/thumbs/DDSC01264.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00364.jpg"><img src="images/thumbs/DSC00364kopie.JPEG" alt="" /></a></article>
-						<article><a class="thumbnail" href="images/fulls/IMG_4413.JPEG"><img src="images/thumbs/IMG_4413.JPEG" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/IMG_6613.jpeg"><img src="images/thumbs/IMG_6613.jpeg" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/IMG_4605.JPEG"><img src="images/thumbs/IMG_4605.JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00414.JPEG"><img src="images/thumbs/DSC00414.JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/IMG_5189.JPEG"><img src="images/thumbs/IMG_5189(1).JPEG" alt="" /></a></article>
@@ -56,6 +56,7 @@
 
 	</body>
 </html>
+
 
 
 
