--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<article><a class="thumbnail" href="images/fulls/IMG_5189.JPEG"><img src="images/thumbs/IMG_5189(1).JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a></article>
-						<article><a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/DSC01264"><img src="images/thumbs/DSC01264" alt="" /></a></article>
 					</section>
 
 				<!-- Footer -->
@@ -56,6 +56,7 @@
 
 	</body>
 </html>
+
 
 
 
