--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<article><a class="thumbnail" href="images/fulls/DDSC01620.JPG"><img src="images/thumbs/DSC01620.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00364.jpg"><img src="images/thumbs/DSC00366.JPG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/IMG_6613.jpeg"><img src="images/thumbs/IMG_6613.jpeg" alt="" /></a></article>
-						<article><a class="thumbnail" href="images/fulls/IMG_4605.JPEG"><img src="images/thumbs/IMG_4605.JPEG" alt="" /></a></article>
+						<article><a class="thumbnail" href="images/fulls/IMG_7220.jpeg"><img src="images/thumbs/IMG_7220.jpeg" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/DSC00414.JPEG"><img src="images/thumbs/DSC00414.JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/IMG_5189.JPEG"><img src="images/thumbs/IMG_5189(1).JPEG" alt="" /></a></article>
 						<article><a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a></article>
@@ -55,6 +55,7 @@
 
 	</body>
 </html>
+
 
 
 
